# copilot-historian

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: index.html
src/: api.rs  index.rs  main.rs  model.rs  scan.rs  util.rs
