[package]
name = "copilot-historian"
version = "0.2.0"
edition = "2021"
description = "Copilot Historian — self-contained dashboard for exploring GitHub Copilot CLI session history: search, token/AIU consumption, models, repos, summaries."
license = "MIT"
repository = "https://github.com/datumnova/copilot-historian"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
strip = true
